fix: spacing on website applies to li

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 
-    p {
+    p, li {
         line-height: 25px;
     }
 
